# dapp-starter

./: .gitignore  Anchor.toml  Makefile  README.md  init-program.sh  package-lock.json  package.json
_templates/dapp/new/: template.anchor.ejs  template.cargo.ejs
_templates/dapp/new/programs/: template.cargo.ejs  template.xargo.ejs
_templates/dapp/new/tests/: template.tests.ejs
app/: .env.example  README.md  next.config.js  package.json  tsconfig.json
app/src/: manifest.json
app/src/artifacts/: config.json  dapp-starter.json  dapp-starter.ts
app/src/components/WalletButton/: WalletMultiButton.tsx
app/src/constants/: index.ts
app/src/hooks/: useCheckingOnChain.ts  useDemonWallet.ts  useLocalStorage.ts
app/src/layouts/MainLayout/: header.tsx
app/src/pages/: _app.tsx  index.tsx
app/src/providers/wallet/: index.tsx
app/src/types/: index.d.ts
app/src/utils/: helpers.ts
app/src/views/: index.tsx
app/src/views/DappStarter/: index.tsx  methods.ts  useProgram.ts
app/src/views/HomeView/: header.tsx  index.tsx
app/src/wallet/adapter/: e2e.ts  index.ts
dev-scripts/: build.sh  deploy.sh  faucet.sh  gen-wallet.sh  import-wallet.sh  install-program-deps.sh  port-program.sh
dev-scripts/environments/: anchor-version.sh  cli-version.sh  remove-renec-cli.sh  solana-version.sh
examples/: Anchor.toml  README.md  build.sh  deploy.sh
examples/programs/dapp-starter/: Cargo.toml
examples/programs/dapp-starter/src/: lib.rs
examples/wallets/: id.json
programs/dapp-starter/: Cargo.toml
programs/dapp-starter/src/: lib.rs
tests/: dapp-starter.ts
(+13 files in other folders)
